@@ -43,8 +43,6 @@ MAKE=/usr/bin/make
 MKDIR=/usr/bin/mkdir
 MV=/usr/bin/mv
 PATCH=/usr/bin/patch
-PERL=/usr/bin/perl
-PYTHON=/usr/bin/python
 RM=/usr/bin/rm
 RMDIR=/usr/bin/rmdir
 SED=/usr/bin/sed
@@ -59,5 +57,8 @@ WHICH=/usr/bin/which
 
 EGREP="/usr/bin/grep --binary-files=without-match --extended-regexp"
 EGREPP="/usr/bin/grep --binary-files=without-match"
+
+[ -f /usr/bin/perl   ] && PERL=/usr/bin/perl
+[ -f /usr/bin/python ] && PYTHON=/usr/bin/python
 
 # End of file
